# SFMShop_practice

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: message_queue_architecture.md
src/: main.py
src/api/: auth.py  config.py  logger.py  main.py
src/api/clients/: payment_client.py
src/api/middleware/: logging.py
src/api/routes/: auth.py  currency.py  orders.py  products.py  users.py
src/api/templates/: admin.html
src/api/utils/: measure_api_performance.py
src/database/: config.py  connection.py  dependencies.py  migrate.py  tables.py
src/database/queries/: orders.py  products.py  users.py
src/models/: __init__.py  auth.py  order.py  product.py  user.py
src/services/: cache_service.py  exchange_client.py  external_api_service.py  log_service.py  multi_exchange_client.py  order_service.py  queue_consumer.py  queue_producer.py
tests/: test_all_crud.py  test_models.py
